[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-stk-fees-amm'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
serde = { version = "1.0.102", optional = true }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
pallet-assets  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18",default-features = false}
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive","max-encoded-len"] }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

[features]
default = ['std']
std = [
    "serde",
    'codec/std',
    "scale-info/std",
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',  
    'sp-runtime/std',
    'pallet-assets/std',
    "pallet-balances/std",
]
